# backend/controllers/user_controller.go
@@ -27,6 +27,18 @@ type User struct {
 	Birthdate string
 }
 
+//Signin struct
+type Signin struct {
+	Email    string
+	Password string
+}
+
+//Forgot struct
+type Forgot struct {
+	Email string
+	Tel   string
+}
+
 // CreateUser handles POST requests for adding user entities
 // @Summary Create user
 // @Description Create user
@@ -58,6 +70,7 @@ func (ctl *UserController) CreateUser(c *gin.Context) {
 		SetTel(obj.Tel).
 		SetBirthdate(birthdate).
 		Save(context.Background())
+
 	if err != nil {
 		c.JSON(400, gin.H{
 			"error": "saving failed",
@@ -65,7 +78,10 @@ func (ctl *UserController) CreateUser(c *gin.Context) {
 		return
 	}
 
-	c.JSON(200, user)
+	c.JSON(200, gin.H{
+		"status": true,
+		"data":   user,
+	})
 }
 
 // GetUser handles GET requests to retrieve a user entity
@@ -218,6 +234,82 @@ func (ctl *UserController) UpdateUser(c *gin.Context) {
 	c.JSON(200, user)
 }
 
+// UserSignin handles POST requests for adding user entities
+// @Summary User sign in
+// @Description User sign in
+// @ID user-signin
+// @Accept   json
+// @Produce  json
+// @Param user body ent.User true "User entity"
+// @Success 200 {object} ent.User
+// @Failure 400 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /users/{email}/{password} [post]
+func (ctl *UserController) UserSignin(c *gin.Context) {
+	obj := Signin{}
+	if err := c.ShouldBind(&obj); err != nil {
+		c.JSON(400, gin.H{
+			"error": "sign in binding failed",
+		})
+		return
+	}
+	user, err := ctl.client.User.
+		Query().
+		Where(user.EmailEQ(obj.Email)).
+		Where(user.PasswordEQ(obj.Password)).
+		Only(context.Background())
+
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": "sign in failed",
+		})
+		return
+	}
+
+	c.JSON(200, gin.H{
+		"status": true,
+		"data":   user,
+	})
+}
+
+// UserForgotpassword handles POST requests for adding user entities
+// @Summary User forgot password
+// @Description User forgot password
+// @ID user-forgotpassword
+// @Accept   json
+// @Produce  json
+// @Param user body ent.User true "User entity"
+// @Success 200 {object} ent.User
+// @Failure 400 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /users/{email}=?{tel} [post]
+func (ctl *UserController) UserForgotpassword(c *gin.Context) {
+	obj := Forgot{}
+	if err := c.ShouldBind(&obj); err != nil {
+		c.JSON(400, gin.H{
+			"error": "binding failed",
+		})
+		return
+	}
+	user, err := ctl.client.User.
+		Query().
+		Where(user.EmailEQ(obj.Email)).
+		Where(user.TelEQ(obj.Tel)).
+		Only(context.Background())
+
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": "failed to change password",
+		})
+		return
+	}
+
+	c.JSON(200, gin.H{
+		"status": true,
+		"data":   user.ID,
+	})
+}
+
 // NewUserController creates and registers handles for the user controller
 func NewUserController(router gin.IRouter, client *ent.Client) *UserController {
 	uc := &UserController{
@@ -232,10 +324,10 @@ func NewUserController(router gin.IRouter, client *ent.Client) *UserController {
 func (ctl *UserController) register() {
 	users := ctl.router.Group("/users")
 
-	users.GET("", ctl.ListUser)
-
 	// CRUD
+	users.GET("", ctl.ListUser)
 	users.POST("", ctl.CreateUser)
+	users.POST(":email/:password", ctl.UserSignin)
 	users.GET(":id", ctl.GetUser)
 	users.PUT(":id", ctl.UpdateUser)
 	users.DELETE(":id", ctl.DeleteUser)
